# oup_solver

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs  myfunctions.py  tests.rs
